# fastapi-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  docker-compose.yml  email_utils.py  image_utils.py  main.py  populate_db.py  pyproject.toml
alembic/versions/: 327b90f97c02_add_likes_to_posts.py  ec2cf9f01a13_initial_schema.py
routers/: posts.py  users.py
templates/: account.html  error.html  forgot_password.html  home.html  layout.html  login.html  post.html  register.html  reset_password.html
tests/: conftest.py  test_posts.py  test_users.py
